tests/snapshots/parser_snapshots__parser_all@ast-113.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/10_generics/generic_function.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "identity",
                        has_self_param: false,
                        is_extern: false,
                        generics: [
                            GenericParam {
                                name: "T",
                                bounds: [],
                            },
                        ],
                        return_type: Some(
                            Named(
                                "T",
                                [],
                            ),
                        ),
                        params: [
                            ParamDecl {
                                name: "value",
                                ty: Named(
                                    "T",
                                    [],
                                ),
                                is_pointer: false,
                            },
                        ],
                        body: Some(
                            Block {
                                statements: [],
                                returns: Some(
                                    Variable(
                                        "value",
                                    ),
                                ),
                            },
                        ),
                        span: Span {
                            line: 1,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
