tests/snapshots/parser_snapshots__parser_all@ast-115.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/10_generics/generic_struct.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Struct(
                    StructDecl {
                        name: "Box",
                        is_extern: false,
                        generics: [
                            GenericParam {
                                name: "T",
                                bounds: [],
                            },
                        ],
                        fields: [
                            FieldDecl {
                                name: "content",
                                ty: Named(
                                    "T",
                                    [],
                                ),
                                is_pointer: false,
                            },
                        ],
                        methods: [
                            FunctionDecl {
                                name: "get",
                                has_self_param: true,
                                is_extern: false,
                                generics: [],
                                return_type: Some(
                                    Named(
                                        "T",
                                        [],
                                    ),
                                ),
                                params: [],
                                body: Some(
                                    Block {
                                        statements: [],
                                        returns: Some(
                                            Member(
                                                SelfRef,
                                                "content",
                                            ),
                                        ),
                                    },
                                ),
                                span: Span {
                                    line: 4,
                                    col: 11,
                                    len: 8,
                                },
                            },
                        ],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 1,
                    col: 7,
                    len: 6,
                },
            },
        ],
    },
)
