tests/snapshots/parser_snapshots__parser_all@ast-116.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/12_control_flow/break_continue.of
---
Err(
    "unexpected token '('",
)
