tests/snapshots/parser_snapshots__parser_all@ast-117.snap
---
source: tests/parser_snapshots.rs
assertion_line: 19
expression: ast
input_file: examples/spec/08_numeric_conversions/int_narrowing.of
---
Err(
    "unexpected token 'var'",
)
