tests/snapshots/parser_snapshots__parser_all@ast-118.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/12_control_flow/while_loop.of
---
Err(
    "unexpected token '='",
)
