tests/snapshots/parser_snapshots__parser_all@ast-119.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/14_ffi/extern_function_import.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "print",
                        has_self_param: false,
                        is_extern: true,
                        generics: [],
                        return_type: None,
                        params: [
                            ParamDecl {
                                name: "value",
                                ty: Primitive(
                                    String,
                                ),
                                is_pointer: false,
                            },
                        ],
                        body: None,
                        span: Span {
                            line: 1,
                            col: 16,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    col: 16,
                    len: 8,
                },
            },
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "malloc",
                        has_self_param: false,
                        is_extern: true,
                        generics: [],
                        return_type: Some(
                            Pointer(
                                Named(
                                    "Buffer",
                                    [],
                                ),
                            ),
                        ),
                        params: [
                            ParamDecl {
                                name: "size",
                                ty: Primitive(
                                    Uint64,
                                ),
                                is_pointer: false,
                            },
                        ],
                        body: None,
                        span: Span {
                            line: 2,
                            col: 16,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 2,
                    col: 16,
                    len: 8,
                },
            },
        ],
    },
)
