tests/snapshots/parser_snapshots__parser_all@ast-12.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/12_error_unions.of
---
Err(
    "unexpected token '{'",
)
