tests/snapshots/parser_snapshots__parser_all@ast-120.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/14_ffi/extern_fn_type.of
---
Err(
    "unexpected token ','",
)
