tests/snapshots/parser_snapshots__parser_all@ast-121.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/14_ffi/pin_unpin.of
---
Err(
    "unexpected token '*'",
)
